--- a/views/about.pug
+++ b/views/about.pug
@@ -1,27 +1,37 @@
 extends layout
 
 block content
-    h1= title
-    p
-        | Hi, I'm Emily! I am a undergraduate at Boston University studying Computer Science, graduating Spring 2024.
-        | I'm passionate about web development, python, and math.
-        | I am currently looking for a new-grad position in the Boston or New York City areas. I would love to use my expertise
-        | in software development to build solutions that can create a positive impact.
-        | Outside of work, you can find me taking a dance class, longboarding, and trying new cafes.
-        | I love talking to and meeting new people, so feel free to reach out.
-    br
-    p 
-        | Find me here:
-        ul
-            li
-                p
-                    |github:
-                    |
-                    a(href="https://github.com/emilydoh") emilydoh
-            li
-                p
-                    |resume:
-                    |
-                    a(href='../Resume.pdf') link
-            li
-                p email: emilydoh@bu.edu
+    section(class='maincontent', id='about_flex_container')
+        div(class='about_text')
+            h1= title
+            br
+            p
+                | Hi, I'm Emily! I am a undergraduate at Boston University studying Computer Science, graduating Spring 2024.
+                | I'm currently learning about web development and embedded development.
+                | I am currently looking for a new-grad position, I would love to use my interest
+                | in software development to build solutions that can create a positive impact.
+            br
+            p
+                | Outside of work, you can find me playing the guitar, longboarding, and trying new restaurants with friends.
+                | Please feel free to reach out.
+            br
+            p
+                | Find me here:
+                ul
+                    li
+                        p
+                            |github:
+                            |
+                            a(href="https://github.com/emilydoh") emilydoh
+                    li
+                        p
+                            |resume:
+                            |
+                            a(href="./Emily Doherty Resume.pdf") link
+                    li
+                        p
+                            |✉️email:
+                            |
+                            a(href="mailto:emilydoh@bu.edu") emilydoh@bu.edu
+        div
+            img(src='../images/webphoto.jpeg' class="about_photo")
