--- a/views/projects.pug
+++ b/views/projects.pug
@@ -1,17 +1,21 @@
 extends layout
 
 block content
-    h1 Projects
-    div
-        h2 Weatherify
-        p A web app that generates a playlist based on the weather at a user's location and their spotify listening tastes
-        p built using OpenWeatherMap and Spotify APIs, Flask, and SQLite
-    div
-        h2 Melpomo
-        p A timer web app based on the pomodoro study technique, built using flask
-    div
-        h2 Wordle CLI Game
-        p A command line based implementation of wordle built in java
-    div
-        h2 personal website
-        p voila
+    section(class='maincontent')
+        h1 Projects
+        br
+        div
+            h2 Weatherify
+            p A web app that generates a playlist based on the weather at a user's location and their Spotify listening tastes built using OpenWeatherMap and Spotify APIs, Flask, and SQLite
+        br
+        div
+            h2 Melpomo
+            p A timer web app based on the pomodoro study technique, built using Flask
+        br
+        div
+            h2 Wordle CLI Game
+            p A command line based implementation of wordle built in Java
+        br
+        div
+            h2 Personal Website
+            p Built using NodeJS and Express
